--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,30 @@
 
 body {
 	font-family: helvetica, arial;
+	overflow: scroll;
+	background-color: darkgrey;
+}
+
+button {
+	position: relative;
+	text-align: center;
+	margin-left: 4px;
+	margin-top: 4px;	
+	font-size: 20px;
+
 }
 
 #container {
-	border: 10px solid grey;
+	border: 10px solid rgb(20, 20, 20);
 	display: inline-block;
-	overflow: hidden;
+	overflow: scroll;
+	margin: 0 auto;
+	margin-left: 14%;
 }
 
 .game-board {
-	border: 5px solid purple;
-	background: rgba(0, 0, 256, .55);
+	border: 5px solid darkgrey;
+	background: rgb(110, 110, 256);
 	display: inline-block;
 	float: right;
 }
@@ -23,7 +36,7 @@ body {
 
 .square-space {
 	display: inline-block;
-	border: 2px solid rgba(256, 200, 0, 1);
+	border: 2px solid rgba(88, 200, 0, 1);
 	padding: 20px;
 	max-width: 100px;
 	min-width: 20px;
@@ -38,11 +51,14 @@ body {
 	/*z-index: 1000;*/
 }
 
+
+
 section#ship-key {
 	overflow: hidden;
-	border: 2px solid darkorange;
+	border: 2px solid rgba(88, 200, 0, 1);
 	display: inline-block;
 	float: left;
+	background-color: lightgrey;
 }
 
 li{
@@ -59,12 +75,22 @@ div.block-holder {
 }
 
 div [type='boat-blocks'] {
-	width: 8px;
-	height: 8px;
-	background: rgba(0, 100, 30, .2);
+	width: 20px;
+	height: 20px;
+	background: rgb(204, 224, 210);
 	border: 1px solid rgb(0, 100, 30);
 }
+#timer {
+	float: right;
+	border: 2px solid rgba(88, 200, 0, 1);
+	display: inline-block;
+	text-align: center;
+	font-size: 80px;
+	width: 170px;
+	height: 334px;
+	background-color: lightgrey;
 
+}
 #hit {
 	border: 2px solid red;
 	background-color: rgba(256, 0, 0, .3);
@@ -73,7 +99,7 @@ div [type='boat-blocks'] {
 
 #boat-hits {
 	border: 1px solid red;
-	background: rgba(256, 0, 0, .3);
+	background: rgb(255, 179, 179);
 }
 
 
